add .circleci artifacts